cmake_minimum_required(VERSION 3.20)
project(Daily_one_problem)

set(CMAKE_CXX_STANDARD 14)

add_executable(Daily_one_problem LeetCode/Easy/Easy717.cpp LeetCode/Medium/Medium838.cpp LeetCode/Hard/Hard1994.cpp LeetCode/Easy/Easy917.cpp LeetCode/Medium/Medium1706.cpp LeetCode/Medium/Medium537.cpp LeetCode/Medium/Medium553.cpp LeetCode/Hard/Hard564.cpp LeetCode/Easy/Easy258.cpp LeetCode/Easy/Easy504.cpp LeetCode/Medium/Medium2100.cpp LeetCode/Medium/Medium6.cpp LeetCode/Medium/Medium2055.cpp LeetCode/Easy/Easy590.cpp LeetCode/Medium/Medium393.cpp Least_zero.cpp LeetCode/Easy/Easy653.cpp)
