cmake_minimum_required(VERSION 3.20)
project(Daily_one_problem)

set(CMAKE_CXX_STANDARD 17)

add_executable(Easy1668 LeetCode/Easy/Easy1668.cpp LeetCode/Easy/Easy.cpp)
add_executable(Medium1620 LeetCode/Medium/Medium1620.cpp LeetCode/Medium/Medium.cpp)
add_executable(Weekgame LeetCode/Weekgame.cpp)
add_executable(Medium LeetCode/Medium/Medium.cpp)
add_executable(Easy LeetCode/Easy/Easy.cpp)